--- a/GreenAndRed/Base.lproj/Main.storyboard
+++ b/GreenAndRed/Base.lproj/Main.storyboard
@@ -16,82 +16,27 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yEi-dF-Q9M">
-                                <rect key="frame" x="20" y="44" width="374" height="411"/>
+                                <rect key="frame" x="20" y="64" width="374" height="402"/>
                                 <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="yEi-dF-Q9M" secondAttribute="height" multiplier="374:411" id="mqB-Xd-byI"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="mqB-Xd-byI"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="mqB-Xd-byI"/>
-                                    </mask>
-                                </variation>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="d0z-PM-YC6">
-                                <rect key="frame" x="20" y="463" width="374" height="411"/>
+                            <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="d0z-PM-YC6">
+                                <rect key="frame" x="20" y="474" width="374" height="402"/>
                                 <color key="backgroundColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="d0z-PM-YC6" secondAttribute="height" multiplier="374:411" id="HvB-rp-0NS"/>
-                                </constraints>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="HvB-rp-0NS"/>
-                                    </mask>
-                                </variation>
-                                <variation key="heightClass=regular-widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="HvB-rp-0NS"/>
-                                    </mask>
-                                </variation>
                             </view>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="d0z-PM-YC6" firstAttribute="top" secondItem="yEi-dF-Q9M" secondAttribute="bottom" constant="8" id="12P-w3-2Sk"/>
-                            <constraint firstItem="d0z-PM-YC6" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="463" id="2nj-To-o7B"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yEi-dF-Q9M" secondAttribute="trailing" constant="20" id="6I4-k3-3YC"/>
-                            <constraint firstItem="d0z-PM-YC6" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9ay-uT-YC3"/>
-                            <constraint firstItem="d0z-PM-YC6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Dyb-n0-dGd"/>
-                            <constraint firstItem="yEi-dF-Q9M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="req-Dk-ebX"/>
-                            <constraint firstItem="d0z-PM-YC6" firstAttribute="top" secondItem="yEi-dF-Q9M" secondAttribute="bottom" constant="8" id="tcG-4a-SJa"/>
-                            <constraint firstAttribute="bottom" secondItem="d0z-PM-YC6" secondAttribute="bottom" constant="22" id="yM7-hH-Wce"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d0z-PM-YC6" secondAttribute="trailing" constant="20" id="zas-gy-xNe"/>
-                            <constraint firstItem="yEi-dF-Q9M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="zjo-th-xfy"/>
+                            <constraint firstItem="d0z-PM-YC6" firstAttribute="top" secondItem="yEi-dF-Q9M" secondAttribute="bottom" constant="8" id="5mz-k2-y0S"/>
+                            <constraint firstItem="yEi-dF-Q9M" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="DoN-Vo-u0u"/>
+                            <constraint firstAttribute="bottom" secondItem="d0z-PM-YC6" secondAttribute="bottom" constant="20" id="K1I-eP-IsK"/>
+                            <constraint firstItem="yEi-dF-Q9M" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="Otd-gj-1ki"/>
+                            <constraint firstItem="d0z-PM-YC6" firstAttribute="width" secondItem="yEi-dF-Q9M" secondAttribute="width" id="Rsl-oM-lQS"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="d0z-PM-YC6" secondAttribute="trailing" constant="20" id="eVy-Nt-sgS"/>
+                            <constraint firstItem="d0z-PM-YC6" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="fDF-1H-Gp5"/>
+                            <constraint firstItem="d0z-PM-YC6" firstAttribute="height" secondItem="yEi-dF-Q9M" secondAttribute="height" id="khC-zU-1rC"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="yEi-dF-Q9M" secondAttribute="trailing" constant="20" id="zJQ-LL-ejO"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="6I4-k3-3YC"/>
-                                <exclude reference="zas-gy-xNe"/>
-                                <exclude reference="req-Dk-ebX"/>
-                                <exclude reference="zjo-th-xfy"/>
-                                <exclude reference="12P-w3-2Sk"/>
-                                <exclude reference="2nj-To-o7B"/>
-                                <exclude reference="9ay-uT-YC3"/>
-                                <exclude reference="Dyb-n0-dGd"/>
-                                <exclude reference="tcG-4a-SJa"/>
-                                <exclude reference="yM7-hH-Wce"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="6I4-k3-3YC"/>
-                                <include reference="zas-gy-xNe"/>
-                                <include reference="req-Dk-ebX"/>
-                                <include reference="zjo-th-xfy"/>
-                                <include reference="12P-w3-2Sk"/>
-                                <exclude reference="2nj-To-o7B"/>
-                                <exclude reference="9ay-uT-YC3"/>
-                                <include reference="Dyb-n0-dGd"/>
-                                <include reference="tcG-4a-SJa"/>
-                                <include reference="yM7-hH-Wce"/>
-                            </mask>
-                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
